--- a/config.toml
+++ b/config.toml
@@ -378,7 +378,7 @@ ignoreErrors = ["err-missing-comment-accesstoken", "err-missing-oembed-accesstok
   defaultTheme = "auto"
   # public git repo url only then enableGitInfo is true
   # 公共 git 倉庫路徑，僅在 enableGitInfo 設為 true 時有效
-  gitRepo = "https://github.com/khusika/FeelIt"
+  gitRepo = "https://github.com/880831ian/blog"
   # which hash function used for SRI, when empty, no SRI is used ("sha256", "sha384", "sha512", "md5")
   # 哪種哈希函數用來 SRI, 為空時表示不使用 SRI ("sha256", "sha384", "sha512", "md5")
   fingerprint = ""
@@ -545,7 +545,7 @@ ignoreErrors = ["err-missing-comment-accesstoken", "err-missing-oembed-accesstok
       copy = true
       # the maximum number of lines of displayed code by default
       # 默認展開顯示的代碼行數
-      maxShownLines = 20
+      maxShownLines = 30
     # KaTeX mathematical formulas config (KaTeX https://katex.org/)
     # KaTeX 數學公式配置 (KaTeX https://katex.org/)
     [params.page.math]
