# 新增 什麼是 IaC ? Terraform 又是什麼？

--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ themesDir = "themes"
 
 # website title
 # 網站標題
-title = "PinYi"
+title = "PinYi 部落格"
 
 # whether to use robots.txt
 # 是否使用 robots.txt
